--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -5,16 +5,12 @@ html{font-size: 20px;}
 .blue{color: skyblue;}
 .pink{color: rgb(255,192,203);}
 h1{
-font: size 2rem;
+font-size: 2rem;
 letter-spacing:  1.2em;
 text-shadow: 5px 1px 2px gray;
 border-bottom:solid 3px rgb(115,115,114);
 
-
-  font-family: "Noto Sans JP", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
+ font-family: "Josefin Sans", sans-serif;
 }
 
 #basic p{font-weight: bold;}
