--- a/kadai_022/style.css
+++ b/kadai_022/style.css
@@ -59,8 +59,8 @@ h2{
 }
 
 h2::before{
-    content: "⚫︎";
-    color: rgb(236,111,139);
+    content: "●";
+    color: rgb(239,111,139);
     font-size: 25px;
 }
 
